objects/Opportunity_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Competitor_Legacy_ID__c</fullName>
        <label>Opportunity Competitor Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winning Competitor</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opportunity Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>